--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1691,107 +1691,107 @@ stories:
   domain: http://www.boston.com/
   link: https://www.boston.com/news/crime/2019/12/27/road-rage-incident-ends-with-car-covered-in-cement
 images:
-- name: catacombs-catacombs-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-electricity.jpg
-- name: mistywoods-babyfoot-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-dali.jpg
-- name: nazi-invasion-light-rail-yellow-calif.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-light-rail-yellow-calif.jpg
-- name: mosaic-face-mosaic-face-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-cinnamon-rolls.jpg
-- name: gypsy-wagon-gypsywagon-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-electricity.jpg
-- name: old-gas-pumps-oldgaspumps-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
-- name: oldsmallboat-oldsmallboat-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-dali.jpg
-- name: gypsy-wagon-gypsywagon-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-nazi-poster.jpg
-- name: flower-barbed-wire-flower-barbed-wire-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crabapple.jpg
-- name: power-lines-power-lines-empty-space-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
-- name: statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-- name: powerlines-power-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-cinnamon-rolls.jpg
-- name: bf-skinner-surveillance-cameras_36569244062_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-cameras_36569244062_o.jpg
-- name: berlinwall2-berlinwall-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
-- name: crow_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_color.jpg
-- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
-- name: aws-s3-stories-shipping-energy-trucking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
-- name: miamibeach-miamibeach-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-really-hot.jpg
-- name: bf-skinner-border-down-the-fence-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-border-down-the-fence-line.jpg
-- name: amusement-park-amusement-park-2-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-atari-asteroids.jpg
-- name: supreme-court-supremecourt-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
-- name: window-window-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
-- name: status-berlin-status-berlin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-marcel-duchamp.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-graham-sutherland.JPG
-- name: trucksilo-trucksilo-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-color.jpg
-- name: white-house-lawn-white-house-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
-- name: oldhousecars-house-old-cars-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gred-mash.jpg
-- name: meadowbutterfly-meadow-butterfly-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-green-zuma.jpg
-- name: beach-clouds-lifeguard-beachclouds-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-sunday.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-light-dali.jpg
-- name: crow-crow-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
-- name: white-house-whitehouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-light-dali.jpg
-- name: locked-up-steam-lock-up-steam-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
-- name: paris-paris-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crabapple.jpg
-- name: fence-fence-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-diego-rivera1.jpg
-- name: old-house-oldhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-three.jpg
-- name: walled-garden-walled-garden-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
-- name: stalin-time-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-construction-crane-city.jpg
-- name: aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-- name: yosemite-yosemite-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purp-paper.jpg
-- name: adam-smith-adam-smith-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
-- name: server-cloud-server-racks-clouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-mucha-mult.jpg
-- name: server-cloud-server-racks-door-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-purple-storm.jpg
-- name: white-house-whitehouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-storm.jpg
-- name: catacombs-catacombs-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-graham-sutherland.jpg
-- name: bluelake-gan-vogh-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-01-17-38.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
-- name: berlinwall-DSC-0084-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-rainbow-festival.jpg
-- name: server-cloud-server-racks-clouds-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-diego-rivera1.jpg
-- name: adam-smith-adam-smith-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
+- name: old-door-lock-old-door-lock-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
+- name: razorwire-DSC-0080-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-diego-rivera1.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy.jpg
+- name: stalin-time-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital_36728421355_o.jpg
+- name: beach-rocks-beach-rocks-currents-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-monet-one.jpg
+- name: oldhotel-oldhotel-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
+- name: bluelake-gred-mash-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
+- name: la-muse-lincoln-sitting-front.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-sitting-front.jpg
+- name: border-fence-border-fence-on-hill-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sand-paper.jpg
+- name: razorcliff-razorcliff-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-three.jpg
+- name: rockingchair-rockingchair-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-marcel-duchamp.jpg
+- name: stories-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-deep-connections.jpg
+- name: border-fence-border-fence-on-hill-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-circuit.jpg
+- name: oldcabin-store-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
+- name: copper-circuit-sub-way-bart-going-by.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sub-way-bart-going-by.jpg
+- name: oldhousecars-house-old-cars-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
+- name: abandonedbuildings_constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_constitution.jpg
+- name: stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
+- name: docks-docks-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
+- name: oldcabin-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-purple-pond.jpg
+- name: beach-rocks-beach-rocks-currents-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crabapple.jpg
+- name: la-muse-hallway-long-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hallway-long-hospital.jpg
+- name: stalin-time-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital-records-building.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: old-door-lock-old-door-lock-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+- name: castle-wall-DSC-0067-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit.JPG
+- name: stalin-time-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hollywood-sign-with-tower.jpg
+- name: white-house-whitehouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-two.jpg
+- name: stalin-time-statue-of-liberty-front-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty-front-bright.jpg
+- name: miamibeach-miamibeach-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alberto-giacometti.jpg
+- name: hollywood-building-hollywood-building-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
+- name: curtain-curtain-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-circuit.jpg
+- name: paris-paris-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-light-dali.jpg
+- name: udnie-IMG_7880.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7880.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
+- name: crow-crow-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
+- name: oldcabin-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-missle.jpg
+- name: nazi-invasion-IMG_6170.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
+- name: cargo-ship-cargo-ship-on-sea-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alien-goggles.jpg
+- name: white-house-lawn-white-house-lawn-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sand-paper.jpg
+- name: miamibeach-miamibeach-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-blocks.jpg
+- name: ellis-island-ellis-island-room-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-paper.jpg
+- name: white-house-whitehouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-pablo-blue.jpg
+- name: abandonedbuildings_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kandinsky_bv.jpg
+- name: nyc-flag-api-conversations-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-aqua.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+- name: hollywood-building-hollywood-building-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
+- name: fence-mexico-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-oily-mcoilface.jpg
+- name: berlinwall-DSC-0084-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alberto-giacometti.jpg
+- name: crow_dark_soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_soul.jpg
 ---
 Target Shooting Is A Favorite Pastime.&nbsp;Demi Lovato's New Rebirth Tattoo.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Holiday Luncheon Festive Performance.&nbsp;Los Fresnos Claims City Of Palms Championship.&nbsp;Sharjah Institute Of Documentation And Archiving Decides For MediaINFO.&nbsp;Three Vehicle Accident East Of Lexington Results In Fatality.&nbsp;Hawkeyes' Epenesa Is One Of A Kind.&nbsp;
